<resources>
    <string name="app_name">Stories</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_length_password">Password is at least 8 characters</string>
    <string name="error_empty_email">Email is required</string>
    <string name="error_valid_email">The email entered is not correct</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="title_welcome_page">Welcome to stories</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="refresh">Refresh</string>
    <string name="account">Your Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="photo">Photo</string>
    <string name="description">Description</string>
    <string name="uploaded">Uploaded on</string>
    <string name="retry">Retry</string>
    <string name="upload_text">Upload story</string>
    <string name="upload_date">Uploaded Date</string>
    <string name="error_email_password">Email or password can\'t be empty</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take a photo</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="error_file">Please upload an image first</string>
    <string name="choose_image">Choose an Image</string>
    <string name="error_permission">You don\'t have a permission</string>
    <string name="create_new_story">Create New Story</string>
    <string name="error_failed_take_photo">Failed to take a photo</string>
    <string name="error_open_camera">Failed to open the camera</string>
    <string name="error_empty_name">name can\'t be empty</string>
    <string name="location_switch">Add your location</string>
    <string name="title_activity_gmaps">GMapsActivity</string>
</resources>